# Tcl-NAP

./: README.md  makeRepo.py
data/: c.sh  darlam.cdl  darlam.nc  geog.cdl  geog.nc  lat_lon_60km.cdl  lat_lon_60km.nc  m.cif  regrid.tcl
data/CVS/: Entries  Repository
data/gshhs/CVS/: Entries  Repository
data/land_flag/CVS/: Entries  Repository
data/udunits/CVS/: Entries  Repository
generic/: .#nap_hdf.c,m4.1.138  cart_proj.c  eval_tree.c  function.c,m4  generic.cvs_rev.out  geometry.c,m4  land_flag.c  land_flag.h  land_flag_i.c  linsys.c,m4  linsys.h,m4  ma.out  nap.c,m4  nap.h,m4  napChoice.c,m4  napDyad.c,m4  napDyadLib.c,m4  napImgNAO.c  napInit.c  napInt.h  napLib.c,m4  napMonad.c,m4  napParse.y  napParseLib.c,m4  napPolygon.c  napSpatial.c,m4  nap_check.h  nap_get.c  nap_hdf.c,m4  nap_hdf.h  nap_netcdf.c,m4  nap_netcdf.h  nap_ooc.c,m4  napsh.c  t  t1.out  triangulate.c  triangulate.h
generic/CVS/: Entries  Repository
generic/backup/: cart_proj.c  cvs_rev.out  eval_tree.c  function.c  function.c,m4  geometry.c  include.m4  linsys.c  linsys.h  nap.c  nap.c,m4  nap.h  nap.h,m4  napChoice.c  napChoice.c,m4  napDyad.c  napDyad.c,m4  napDyadLib.c  napDyadLib.c,m4  napInit.c  napLib.c  napLib.c,m4  napMonad.c  napParse.tab.c  napParse.tab.h  napParse.y  napParseLib.c  napParseLib.c,m4  napPolygon.h  napSpatial.c  napSpatial.c,m4  nap_get.c  nap_hdf.c  nap_netcdf.c  nap_netcdf.c,m4  nap_ooc.c  nap_ooc.c,m4  triangulate.c
generic/new/: function.c,m4  napDyad.c,m4  napImgNAO.c  nap_hdf.c,m4
generic/old/: nap_ooc.c,m4
generic/udunits/: tsearch.c  udposix.h  udunits.h  utlib.c  utparse.c  utprivate.h  utscan.c  utscan.h
generic/udunits/CVS/: Entries  Repository
html/: ack.html  array.html  bin_io.html  caps_nap_menu.html  choose_file.html  const.html  contents.html  data_type.html  date_function.html  date_proc.html  demo_arith.html  demo_constant.html  demo_construct.html  demo_define_function.html  demo_functions.html  demo_indexing.html  demo_intro.html  demo_io.html  demo_linear.html  demo_ooc.html  demo_simple.html  demo_stat.html  function.html  geog.html  geog_proc.html  grid.html  hdf.html  index.php  indexing.html  install.html  land_flag.html  make_dll.html  model.html  nao.html  nao_ooc.html  nap_args.html  nap_cmd.html  nap_function_lib.html  nap_get.html  nap_info.html  (+20 more)
html/CVS/: Entries  Repository
html/all/: all.ps
html/old/: arith.txt  ascii.txt  cif.txt  constant.txt  construct.txt  define_function.txt  demo_ascii.html  demo_cif.html  demo_elemental_functions.html  demo_matrix_indexing.html  demo_netcdf.html  demo_other_functions.html  demo_vector_indexing.html  elemental_functions.txt  linear.txt  matrix_indexing.txt  netcdf.txt  ooc.txt  other_functions.txt  simple.txt  stat.txt  vector_indexing.txt
installer/: cp2vfs.tcl  my.tcl  my_tkcon.cfg  nap_install.tcl  tclshrc.tcl  tkcon.cfg  wishrc.tcl
installer/CVS/: Entries  Repository
tests/: aa_nap.test  all.tcl  bin_io.test  cart_proj.test  date.test  error.test  geog.test  hdf.test  hdf_netcdf.tcl  land_flag.test  nap.test  napSpatial.test  nap_function_lib.test  nap_info.test  nap_interp.test  netcdf.test  projection.test  stat.test  t.tcl  text_io.test  wish_tests.tcl
tests/CVS/: Entries  Repository
tests/data/: 1.cif  gets_matrix.in  mx1950-01.gridascii  xyz.txt
tests/data/CVS/: Entries  Repository
tests/new/: all.tcl
tex/: Makefile  ack.tex  array.tex  bin_io.tex  caps_nap_menu.tex  choose_file.tex  common.tex  const.tex  data_type.tex  date_function.tex  date_proc.tex  demo_arith.tex  demo_constant.tex  demo_construct.tex  demo_define_function.tex  demo_functions.tex  demo_indexing.tex  demo_intro.tex  demo_io.tex  demo_linear.tex  demo_ooc.tex  demo_simple.tex  demo_stat.tex  env.tex  function.tex  geog.tex  geog_proc.tex  grid.tex  gui_intro.tex  hdf.tex  hdf_netcdf.tex  help_caps_nap_menu.aux  help_caps_nap_menu.out  help_caps_nap_menu.tex  help_choose_file.aux  help_choose_file.out  help_choose_file.tex  help_hdf.tex  help_plot_nao.aux  help_plot_nao.out  (+46 more)
tex/CVS/: Entries  Repository  Root
unix/: CUSTOMIZE  Makefile  Makefile.in  a.tcl  aclocal.m4  at.tcl  b.tcl  c.tcl  configure  configure.in  configure.m4  cpi.tcl  d.tcl  depend.mk  hdf.bug  hdf.tcl  hdf0.tcl  hdf1.tcl  hdf2.tcl  i.tcl  ig.tcl  interp.tcl  jen.tcl  long.tcl  map.tcl  nap.patch  nap4_0_3windows_install.tcl  nap6_2_2windows_install.tcl  nap_get.tcl  nc.tcl  nc.tcl-  nc.tcl--  nels.tcl  ooc.tcl  p.out  paul.tcl  pkgIndex.tcl  pkgIndex.tcl.in  pr_alloc.awk  pr_alloc.out  (+18 more)
unix/CVS/: Entries  Repository
unix/autom4te.cache/: output.0  requests  traces.0
unix/new/: Makefile.in  configure.m4  pr_alloc.sh
